# cmake_practice

animal/: CMakeLists.txt
animal/include/: dog.h
animal/src/: main.cpp
animal_2/: CMakeLists.txt  生成库文件.md
markdown/: vscode编译基础.md  嵌套cmakelists.md  条件编译.md  构建标准小型工程.md  生成库文件.md
message/: CMakeLists.txt  Makefile  hello_world.cpp  print.cmake  基本应用.md
option_project/: CMakeLists.txt
option_project/animal/: CMakeLists.txt
option_project/animal/include/: cat.h
option_project/animal/src/: cat.cpp  dog.cpp  two_cat.cpp
total_project/: 嵌套cmakelists.md
total_project/animal/: CMakeLists.txt
total_project_2/: CMakeLists.txt  嵌套cmakelists.md
total_project_OBJECT/: CMakeLists.txt  main.cpp  嵌套cmakelists.md
total_project_OBJECT/animal/: CMakeLists.txt
total_project_OBJECT/animal/include/: config.h.in
